// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Definitions > #2600 1`] = `"tsconfigProject/foo.vue"`;

exports[`Definitions > #2600 2`] = `
{
  "end": {
    "character": 0,
    "line": 0,
  },
  "start": {
    "character": 0,
    "line": 0,
  },
}
`;

exports[`Definitions > Alias path 1`] = `"tsconfigProject/foo.ts"`;

exports[`Definitions > Alias path 2`] = `
{
  "end": {
    "character": 25,
    "line": 0,
  },
  "start": {
    "character": 0,
    "line": 0,
  },
}
`;

exports[`Definitions > TS to vue 1`] = `"tsconfigProject/empty.vue"`;

exports[`Definitions > TS to vue 2`] = `
{
  "end": {
    "character": 0,
    "line": 0,
  },
  "start": {
    "character": 0,
    "line": 0,
  },
}
`;

exports[`Definitions > TS to vue 3`] = `"tsconfigProject/empty.vue"`;

exports[`Definitions > TS to vue 4`] = `
{
  "end": {
    "character": 0,
    "line": 0,
  },
  "start": {
    "character": 0,
    "line": 0,
  },
}
`;
